--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ name/anj.file
 
 #this will ignore all files and folders between lib and name folder 
 **/lib/**/name/
+
+# this will ignore all folders end with name1
+*name1/
